# fundamental-algorithms

./: .gitignore  main.c
4Term/: CMakeLists.txt  config.json  main.cpp  para.cpp
4Term/kursovaya/: CMakeLists.txt  course_work.docx  main.cpp
4Term/kursovaya/compare/: comparator.cpp  comparator.h  key_comparator.cpp  key_comparator.h  string_comparer.cpp  string_comparer.h
4Term/kursovaya/containers/: data.h  data_base.cpp  data_base.h  data_collection.cpp  data_collection.h  pool.cpp  pool.h  scheme.cpp  scheme.h
4Term/kursovaya/logger/: builder_implementation.cpp  builder_implementation.h  json.h  json_implementation.cpp  json_implementation.h  logger.h  logger_holder.cpp  logger_holder.h  logger_implementation.cpp  logger_implementation.h
4Term/kursovaya/memory_allocators/: border_descriptors_allocator.cpp  border_descriptors_allocator.h  buddy_allocator.cpp  buddy_allocator.h  global_heap_allocator.cpp  global_heap_allocator.h  memory_holder.h  sorted_list_allocator.cpp  sorted_list_allocator.h
4Term/kursovaya/request_handler_with_command_chain/: command.h  command_add_collection.cpp  command_add_collection.h  command_add_data.cpp  command_add_data.h  command_add_pool.cpp  command_add_pool.h  command_add_scheme.cpp  command_add_scheme.h  command_get_data.cpp  command_get_data.h  command_get_data_between.cpp  command_get_data_between.h  command_remove_collection.cpp  command_remove_collection.h  command_remove_data.cpp  command_remove_data.h  command_remove_pool.cpp  command_remove_pool.h  command_remove_scheme.cpp  command_remove_scheme.h  command_update_data.cpp  command_update_data.h  handler.h  handler_implementation.cpp  handler_implementation.h
4Term/kursovaya/tests/: file_to_test.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt
4Term/kursovaya/tree/: associative_container.h  binary_search_tree.h  splay_tree.h
4Term/kursovaya/types/: data_type.h
4Term/kursovaya/validate/: date_validator.cpp  date_validator.h  digit_validator.cpp  (+3 more)
4Term/logger/: builder.h  builder_implementation.cpp  builder_implementation.h  json.h  json_implementation.cpp  json_implementation.h  logger.h  logger_holder.cpp  logger_holder.h  logger_implementation.cpp  logger_implementation.h  namespace.h
4Term/long_numbers/: big_int.h
4Term/memory_allocators/: border_descriptors_allocator.cpp  border_descriptors_allocator.h  buddy_allocator.cpp  buddy_allocator.h  global_heap_allocator.cpp  global_heap_allocator.h  memory.cpp  memory.h  memory_holder.cpp  sorted_list.rar  sorted_list_allocator.cpp  sorted_list_allocator.h
4Term/task1/: CMakeLists.txt  builder.h  builder_implementation.cpp  builder_implementation.h  config.json  json.h  json_implementation.cpp  json_implementation.h  logger.h  logger_implementation.cpp  logger_implementation.h  main.cpp
4Term/task2/: CMakeLists.txt  config.json  main.cpp  memory.h  memory_implementation.cpp  memory_implementation.h
4Term/task_1/: builder.h  logger.h  logger_implementation.cpp  main.cpp
4Term/tree/: associative_container.h  avl_tree.h  binary_search_tree.h  red_black_tree.h  splay_tree.h
(+98 files in other folders)
